--- a/views/display-recipe.ejs
+++ b/views/display-recipe.ejs
@@ -79,7 +79,7 @@
                     </div>
                     <br>
                     <div class="recipe-content">
-                        <p>
+                        <p style="white-space: pre-line">
                             <%= recipe.full_recipe %>
                         </p>
                     </div>
