add content and style footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,6 @@
-<footer>Author: Samuel Eras</footer>
+<footer>
+    <div class="creator">WebApp created by Samuel Eras</div>
+    <div class="github">
+        Check it out on GitHub: <a id="github-link" href="https://github.com/samueleras/digital-cookbook" target="_blank"></a>
+    </div>
+</footer>
