--- a/public/nav-footer.css
+++ b/public/nav-footer.css
@@ -19,9 +19,6 @@
     inset: 0 30% 0 0;
     padding-top: 3rem;
     transform: translateX(-100%);
-
-/*     background: hsla(110, 48%, 58%, 0.1);
-    backdrop-filter: blur(.7rem); */
 }
 
 .flexcontainer-navbar[data-visible="true"] {
@@ -61,10 +58,25 @@ button#toggle-nav[menu-openend="true"]{
 
 /* FOOTER */
 footer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem 5rem;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
-    padding: 1rem;
+    font-size: 1.6rem;
+    padding: 1.5rem;
     background-color: var(--secondary-background);
     text-align: center;
+}
+
+#github-link{
+    background: url(icons/github.png) no-repeat;
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    background-size: 100%;
+    vertical-align: -4px;
 }
 
 
