--- a/public/nav-footer.css
+++ b/public/nav-footer.css
@@ -19,6 +19,7 @@
     inset: 0 30% 0 0;
     padding-top: 3rem;
     transform: translateX(-100%);
+    transition: all .2s ease-out;
 }
 
 .flexcontainer-navbar[data-visible="true"] {
