--- a/public/display-recipes.css
+++ b/public/display-recipes.css
@@ -87,6 +87,10 @@
     background: url(icons/unlike.svg) no-repeat;
 }
 
+a[display=false]{
+    display: none;
+}
+
 .page-selector{
     display: flex;
     width: 100%;
