adjust style of "no recipes found" text

--- a/public/display-recipes.css
+++ b/public/display-recipes.css
@@ -109,6 +109,10 @@ a[display=false]{
     color: rgb(23, 146, 64);
 }
 
+#no-recipes{
+    text-align: center;
+}
+
 /* On screens that are 800px or more (TABLET/DESKTOP) */
 @media screen and (min-width: 800px) {
 
