--- a/views/create-or-edit-recipe.ejs
+++ b/views/create-or-edit-recipe.ejs
@@ -27,7 +27,7 @@
                         <label>Upload Recipe Picture (optional):</label>
                         <label for="image" class="no-linebreak"><span id="upload-icon"></span> Upload</label>
                         <input type="file" id="image" name="image">
-                        <div class="errormessage"></div>
+                        <div upload-status="error"></div>
                     </div>
                     <!-- Difficulty of preparing this dish -->
                     <div class="input-control">
