--- a/public/display-recipe.css
+++ b/public/display-recipe.css
@@ -113,7 +113,7 @@
 @media screen and (min-width: 1500px) {
 
     .flex-container-recipeheader {
-        grid-template-columns: 40rem auto;
+        grid-template-columns: max(40rem, 40%) auto;
     }
 
 }
