--- a/views/display-recipes.ejs
+++ b/views/display-recipes.ejs
@@ -40,7 +40,7 @@
                     </div>
                 </div>
 
-                <% let elements_per_page=2; let endindex=page * elements_per_page; let startindex=endindex -
+                <% let elements_per_page=10; let endindex=page * elements_per_page; let startindex=endindex -
                     elements_per_page; if(recipes.length < endindex){ endindex=recipes.length } %>
                     <% if(recipes.length> 0) { %>
                         <div class="grid-container-recipes">
@@ -48,8 +48,12 @@
                                 <div class="recipe">
                                     <a class="flex-container-recipe" href="/recipe/display/<%= recipes[i]._id %>">
                                         <div class="recipe-image">
-                                            <img style="width: 100%; aspect-ratio: 1;"
-                                                src="<%= recipes[i].image_link %>" alt="">
+                                            <picture>
+                                                <source media="(min-width: 400px)"
+                                                    srcset="<%= recipes[i].image_link %>_desktop.webp">
+                                                <img style="width: 100%; aspect-ratio: 1;"
+                                                    src="<%= recipes[i].image_link %>_mobile.webp" alt="">
+                                            </picture>
                                         </div>
                                         <div class="recipe-info">
                                             <h2>
