--- a/public/nav-footer.css
+++ b/public/nav-footer.css
@@ -72,7 +72,7 @@ footer {
 }
 
 #github-link{
-    background: url(icons/github.png) no-repeat;
+    background: url(icons/github.webp) no-repeat;
     display: inline-block;
     width: 2rem;
     height: 2rem;
