add page title background and custom font

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,10 +5,9 @@
     <body>
 
         <%- include('./partials/nav.ejs') %>
+        <%- include('./partials/heading.ejs') %>
 
             <main>
-
-                <h1>About</h1>
 
                 <p>This is a Website to save, create and share cooking recipes.</p>
 
