--- a/views/display-recipes.ejs
+++ b/views/display-recipes.ejs
@@ -7,9 +7,7 @@
         <%- include('./partials/nav.ejs') %>
 
             <main>
-                <h1>
-                    <%= title %>
-                </h1>
+                <%- include('./partials/heading.ejs') %>
                 <div class="sort-search-bar">
                     <div class="sort">
                         <form id="form-sort" class="form">
