--- a/views/create-or-edit-recipe.ejs
+++ b/views/create-or-edit-recipe.ejs
@@ -5,13 +5,12 @@
     <body>
 
         <%- include('./partials/nav.ejs') %>
+        <%- include('./partials/heading.ejs') %>
 
             <main>
 
                 <!-- Anfang Formular -->
                 <form id="form-new-recipe" class="form" action="/create-edit-submit" method="POST" enctype="multipart/form-data">
-
-                    <h1><%= title %></h1>
 
                     <!-- Creation or Edit -->
                     <div style="display: none" class="input-control">
