--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,16 +5,14 @@
     <body>
         <%- include('./partials/nav.ejs') %>
 
-            <main>
+            <div class="background"></div>
 
+            <main>
                 <div class="login-signup-container">
                     <form id="formlogin" class="form" action=""><!-- Anfang Formular -->
 
                         <h1>Login</h1>
-  
-                        <div id="successful" data-visible="false">
-                            <h2 >Successful</h2>
-                        </div>
+                        <h2 id="successful" data-visible="false">Successful</h2>
 
                         <!-- USERNAME -->
                         <div class="input-control">
