--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,16 +5,15 @@
     <body>
         <%- include('./partials/nav.ejs') %>
 
+            <div class="background"></div>
+
             <main>
 
                 <div class="login-signup-container">
                     <form id="formsignup" class="form" action=""><!-- Anfang Formular -->
 
                         <h1>Sign Up</h1>
-
-                        <div id="successful" data-visible="false">
-                            <h2>Successful</h2>
-                        </div>
+                        <h2 id="successful" data-visible="false">Successful</h2>
 
                         <!-- USERNAME -->
                         <div class="input-control">
