--- a/public/display-recipes.css
+++ b/public/display-recipes.css
@@ -1,4 +1,3 @@
-
 .sort-search-bar{
     width: 100%;
     display: flex;
@@ -16,13 +15,14 @@
 #sort-dropdown{
     outline: 0;
     border: none;
-    background-color: hsla(0, 0%, 100%, 0.3);
+    background-color: var(--primary-background);
     backdrop-filter: blur(6px);
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1);
     padding: 0.5rem;
     cursor: pointer;
     font-size: 1rem;
     width: 16rem;
+    color: var(--text);
 }
 
 .form input:focus{
@@ -32,9 +32,24 @@
 #search-input{
     background: url(icons/search.svg) no-repeat;
     background-size: 2rem;
-    background-position: right;
-    width: 16rem;
+    background-position: center;
+    width: 3rem;
+    font-size: 1rem;
     padding: 0.5rem;
+    background-color: var(--primary-background);
+    color: var(--text);
+    border: none;
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
+#search-input:focus{
+    background-position: right;
+    width: 100vw;
+}
+
+#search-input::placeholder{
+    color:var(--text);
+    opacity: 0;
 }
 
 .recipe{
@@ -111,6 +126,7 @@ a[display=false]{
 
 #no-recipes{
     text-align: center;
+    margin-block: 10rem;
 }
 
 /* On screens that are 800px or more (TABLET/DESKTOP) */
@@ -126,6 +142,19 @@ a[display=false]{
 
     .recipe-info{
         margin-left: 2rem;
+    }
+
+    #search-input::placeholder{
+        opacity: 1;
+    }
+
+    #search-input{
+        background-position: right;
+        width: 16rem;
+    }
+    
+    #search-input:focus{
+        width: 16rem;
     }
 }
 
