--- a/public/nav-footer.css
+++ b/public/nav-footer.css
@@ -1,7 +1,7 @@
 /* NAV */
 
 .navbar-background {
-    background-color: var(--secondary-background);
+    background-color: var(--primary-background);
     position: fixed;
     z-index: 999;
     top: 0;
@@ -11,7 +11,7 @@
 }
 
 .flexcontainer-navbar{
-    background-color: var(--secondary-background);
+    background-color: var(--primary-background);
     position: fixed;
     z-index: 1000;
     top: 0;
@@ -33,10 +33,11 @@
     height: 3rem;
     align-items: center;
     font-size: 1.5rem;
+    color: var(--nav-text);
 }
 
 .link-text:hover {
-    background-color: rgb(162, 189, 212);
+    background-color: rgb(129, 129, 112);
 }
 
 nav button{
@@ -58,7 +59,7 @@ button#toggle-nav[menu-openend="true"]{
 
 
 /* FOOTER */
-footer {
+footer{
     display: flex;
     flex-wrap: wrap;
     gap: 1rem 5rem;
@@ -67,7 +68,7 @@ footer {
     width: 100%;
     font-size: 1.6rem;
     padding: 1.5rem;
-    background-color: var(--secondary-background);
+    background-color: var(--primary-background);
     text-align: center;
 }
 
