display amount of reviews

--- a/views/display-recipes.ejs
+++ b/views/display-recipes.ejs
@@ -57,8 +57,7 @@
                                             <h2>
                                                 <%= recipes[i].name %>
                                             </h2>
-                                            <p>Rating: <%= recipes[i].rating %>
-                                            </p>
+                                            <p>Rating: <%= recipes[i].rating %> (<%= recipes[i].ratings.length %>)</p>
                                             <p>Preparation Time: <span class="no-linebreak">
                                                     <%= recipes[i].preparation_time %> min
                                                 </span></p>
