fix save/unsave bug, change it to toggle button

--- a/public/display-recipe.css
+++ b/public/display-recipe.css
@@ -73,19 +73,19 @@ main{
     background-size: 100%;
 }
 
-#edit {
+.edit {
     background: url(icons/edit.svg) no-repeat;
 }
 
-#delete {
+.delete {
     background: url(icons/delete.svg) no-repeat;
 }
 
-#save {
+.save {
     background: url(icons/like.svg) no-repeat;
 }
 
-#unsave {
+.unsave {
     background: url(icons/unlike.svg) no-repeat;
 }
 
